--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8087
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mariadb://localhost:5432/studySpringboot
+spring.datasource.username=root
+spring.datasource.password=1234
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
